<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:elevation="5dp"
    android:background="@color/colorPrimaryLight"
    android:paddingLeft="@dimen/base_padding_4x"
    android:paddingTop="@dimen/base_padding_4x"
    android:paddingRight="@dimen/base_padding_4x">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:id="@+id/textView"
        style="@style/Text.Small" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/your_email_adress"
        android:textColorHint="@color/colorTextInputHint" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_padding_4x" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView2"
        style="@style/Text.Small" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:textColor="@color/colorTextDefault"
        android:textColorHint="@color/colorTextInputHint"
        android:imeActionId="@+id/action_sign_in"
        android:imeActionLabel="@string/login" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/base_padding"
        android:paddingBottom="@dimen/base_padding"
        android:id="@+id/error_view"
        android:gravity="fill_vertical">

        <ImageView
            android:layout_width="@dimen/font_s"
            android:layout_height="match_parent"
            android:id="@+id/imageView6"
            android:src="@drawable/ic_alert_error"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/error"
            style="@style/Text.Small.Danger"
            android:text="bla ba bla"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/base_padding" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/button2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onOpenRequestInvite"
            style="@style/Text.Small" />

        <Space
            android:layout_width="@dimen/base_padding_4x"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:background="?attr/selectableItemBackgroundBorderless"
            style="@style/Text.Small.Success" />
    </LinearLayout>


</LinearLayout>