<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:elevation="5dp"
    android:background="@color/colorPrimaryLight"
    android:paddingLeft="@dimen/base_padding_4x"
    android:paddingTop="@dimen/base_padding_4x"
    android:paddingRight="@dimen/base_padding_4x"
    android:gravity="center"
    android:onClick="doNothing">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_thank"
            android:id="@+id/message"
            android:gravity="center"
            style="@style/Text.Small.Muted" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_big_success"
            android:layout_margin="@dimen/base_padding_8x"
            android:contentDescription="@null" />

        <View
            android:layout_height="1px"
            android:layout_width="fill_parent"
            android:background="@color/colorDividerDark"
            android:alpha="0.5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:id="@+id/btn_share"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="onShare"
                style="@style/Text.Small" />

            <Space
                android:layout_width="@dimen/base_padding_4x"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:id="@+id/button3"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="onCloseRegisterResultDialog"
                style="@style/Text.Small" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>