<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:elevation="5dp"
    android:background="@color/colorPrimaryLightAlpha"
    android:gravity="center"
    android:onClick="doNothing">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/auth_dialog_width"
        android:layout_height="wrap_content"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@color/colorPrimaryLight"
        android:baselineAligned="false"
        android:visibility="visible"
        android:layout_gravity="center"
        android:windowSoftInputMode="adjustPan">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding_4x">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:id="@+id/textView"
                style="@style/Text.ExtraSmall.Muted" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/old_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:id="@+id/textView2"
                style="@style/Text.ExtraSmall.Muted" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/new_password"
                android:textColor="@color/colorTextDefault" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                style="@style/Text.ExtraSmall.Muted" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirm_new_password"
                android:textColor="@color/colorTextDefault" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/base_padding"
                android:paddingBottom="@dimen/base_padding"
                android:id="@+id/error_view"
                android:gravity="fill_vertical"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="@dimen/font_s"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView6"
                    android:src="@drawable/ic_alert_error"
                    android:scaleType="fitCenter"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/error"
                    style="@style/Text.Small.Danger"
                    android:text="bla ba bla"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/base_padding" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_button_height"
                    android:text="@string/cancel"
                    android:id="@+id/btn_cancel"
                    android:background="?attr/selectableItemBackground"
                    style="@style/Text.Small" />

                <Space
                    android:layout_width="@dimen/base_padding_4x"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_button_height"
                    android:text="@string/update"
                    android:id="@+id/btn_change_password"
                    android:background="@drawable/btn_login_bg"
                    android:textColor="@color/colorTextLight" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>